--- a/client/client/Views/FindSchoolDlg.xaml
+++ b/client/client/Views/FindSchoolDlg.xaml
@@ -1,12 +1,58 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+<pages:PopupPage  xmlns:pages="http://rotorgames.com" xmlns="http://xamarin.com/schemas/2014/forms"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:material="clr-namespace:Plugin.MaterialDesignControls;assembly=Plugin.MaterialDesignControls"
              x:Class="client.Views.FindSchoolDlg">
+
+    <pages:PopupPage.Animation>
+        <pages:ScaleAnimation
+            DurationIn="400"
+            DurationOut="300"
+            EasingIn="SinOut"
+            EasingOut="SinIn"
+            HasBackgroundAnimation="True"
+            PositionIn="Center"
+            PositionOut="Center"
+            ScaleIn="1.2"
+            ScaleOut="0.8" 
+        />
+    </pages:PopupPage.Animation>
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <StackLayout VerticalOptions="Center" Margin="20">
+            <ImageButton 
+                WidthRequest="40" 
+                HeightRequest="40" 
+                CornerRadius="80" 
+                x:Name="ImgClose"
+                Source="delete_icon"
+                HorizontalOptions="End"
+                Clicked="ImgClose_Clicked"
+            />
+            <StackLayout BackgroundColor="White">
+                <Label Text="SELECT SCHOOL" Margin="15" FontSize="26" />
+                <material:MaterialField
+                   
+                />
+                <CollectionView EmptyView="No Data" 
+                                x:Name="SchooItems" 
+                                SelectionMode="Single"
+                                SelectionChanged="SchooItems_SelectionChanged">
+                    <CollectionView.ItemsLayout>
+                        <LinearItemsLayout Orientation="Vertical" />
+                    </CollectionView.ItemsLayout>
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <StackLayout>
+                                <Frame BackgroundColor="White" BorderColor="#F0F0F0" Padding="5" Margin="5" HasShadow="False">
+                                    <StackLayout HorizontalOptions="FillAndExpand">
+                                        <material:MaterialLabel Text="{Binding Name}" />
+                                    </StackLayout>
+                                </Frame>
+                            </StackLayout>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+
+                </CollectionView>
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
-</ContentPage>
+</pages:PopupPage >
