--- a/client/client/Views/ProfilePage.xaml
+++ b/client/client/Views/ProfilePage.xaml
@@ -57,21 +57,21 @@
                     <material:MaterialField 
                         LabelText="Phone Number" 
                         LabelTextColor="{StaticResource Primary}"
-                        Text="{Binding User.PhoneNumber}" 
+                        Text="{Binding User.Phone}" 
                         FontSize="16"
                         LeadingIcon="phone_icon"
                         />
                     <material:MaterialField 
                         LabelText="Email Address" 
                         LabelTextColor="{StaticResource Primary}"
-                         
+                        Text="{Binding User.Email}"
                         LeadingIcon="mail_icon"
                         FontSize="16"
                         />
                     <material:MaterialField 
                         LabelText="User Id"
                         LabelTextColor="{StaticResource Primary}"
-                        Text="{Binding User.Role}" 
+                        Text="{Binding User.UserType}" 
                         LeadingIcon="identification_icon.png"
                         FontSize="16"
                         />
