--- a/client/client/Views/SignupPage.xaml
+++ b/client/client/Views/SignupPage.xaml
@@ -26,7 +26,7 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
-                        <Button Text="Login"  Margin="10,5" HeightRequest="35" CornerRadius="5" BackgroundColor="#b83542"/>
+                        <Button Text="Login" Command="{Binding OnBackCommand}" Margin="10,5" HeightRequest="35" CornerRadius="5" BackgroundColor="#b83542"/>
                         <material:MaterialButton 
                             Grid.Column="1"
                                 Text="Sign up"  Margin="10,5" 
