--- a/client/client/Views/ProfilePage.xaml
+++ b/client/client/Views/ProfilePage.xaml
@@ -42,7 +42,7 @@
                         />
                     <material:MaterialField 
                         LabelText="First Name" 
-                        Text="{Binding User.FirstName}" 
+                        Text="{Binding User.Name}" 
                         LabelTextColor="{StaticResource Primary}"
                         FontSize="16"
                         LeadingIcon="user_icon"
@@ -50,14 +50,14 @@
                     <material:MaterialField 
                         LabelTextColor="{StaticResource Primary}"
                         LabelText="Last Name" 
-                        Text="{Binding User.LastName}" 
+                        Text="{Binding User.Surname}" 
                         FontSize="16"
                         LeadingIcon="user_icon"
                         />
                     <material:MaterialField 
                         LabelText="Phone Number" 
                         LabelTextColor="{StaticResource Primary}"
-                        Text="{Binding User.Phone}" 
+                        Text="{Binding User.PhoneNumber}" 
                         FontSize="16"
                         LeadingIcon="phone_icon"
                         />
@@ -71,7 +71,7 @@
                     <material:MaterialField 
                         LabelText="User Id"
                         LabelTextColor="{StaticResource Primary}"
-                        Text="{Binding User.UserType}" 
+                        Text="{Binding User.Id}" 
                         LeadingIcon="identification_icon.png"
                         FontSize="16"
                         />
